Typo correction
Signed-off-by: BoykoAlex <alex.boyko@broadcom.com>